# Strange

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  StrangeAttractor.h  main.cpp
cmake/: coverage.cmake
src/: CMakeLists.txt  Rater.cpp  Rater.h  StrangeAttractor.cpp  StrangeAttractor.h  StrangeGenerator.cpp  StrangeGenerator.h  StrangeSearcher.cpp  StrangeSearcher.h  Util.cpp  Util.h  aabb.cpp  aabb.h  main.cpp
test/: CMakeLists.txt  perfOne.cpp  testStrangeAttractor.cpp
