CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(StrangVanilla)


SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


SET(CMAKE_CXX_FLAGS_DEBUG "-fsanitize=address -fno-omit-frame-pointer -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -flto")


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)


ADD_CUSTOM_TARGET(docs
  COMMAND doxygen
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  )

ADD_CUSTOM_TARGET(tags
  COMMAND global --update
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  )