ADD_EXECUTABLE(
  SA
  main.cpp
  StrangeAttractor.cpp
  )



INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
# PKG_SEARCH_MODULE(SDL2_image REQUIRED sdl2_image)
#INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR})
#${SDL2IMAGE_LIBRARY}
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(SA ${SDL2_LIBRARIES} )
