ADD_LIBRARY (
  SA
  STATIC
  StrangeAttractor.cpp
  aabb.cpp
  StrangeSearcher.cpp
  StrangeGenerator.cpp
  Util.cpp
  Rater.cpp
)

ADD_EXECUTABLE(
  main
  main.cpp
  )

TARGET_LINK_LIBRARIES(
  main
  SA
)



INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
# PKG_SEARCH_MODULE(SDL2_image REQUIRED sdl2_image)
#INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR})
#${SDL2IMAGE_LIBRARY}
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(SA ${SDL2_LIBRARIES} )
